Added reafacorting of services and packages
