# product-api/main.go
@@ -2,7 +2,6 @@ package main
 
 import (
 	"context"
-	"log"
 	"net/http"
 	"os"
 	"os/signal"
@@ -14,12 +13,13 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	gohandlers "github.com/gorilla/handlers"
 	"github.com/gorilla/mux"
+	"github.com/hashicorp/go-hclog"
 	"google.golang.org/grpc"
 	"google.golang.org/grpc/credentials/insecure"
 )
 
 func main() {
-	l := log.New(os.Stdout, "product-api", log.LstdFlags)
+	l := hclog.Default()
 	v := data.NewValidation()
 
 	conn, err := grpc.NewClient("localhost:8082", grpc.WithTransportCredentials(insecure.NewCredentials()))
@@ -31,16 +31,21 @@ func main() {
 	// create client
 	cc := protos.NewCurrencyClient(conn)
 
+	// create database instance
+	db := data.NewProductsDB(cc, l)
+
 	// create the handlers
-	ph := handlers.NewProducts(l, v, cc)
+	ph := handlers.NewProducts(l, v, db)
 
 	// create a new serve mux and register the handlers
 	sm := mux.NewRouter()
 
 	// <---------------- API HANDLERS ----------------->
 	getRtr := sm.Methods(http.MethodGet).Subrouter()
+	getRtr.HandleFunc("/products", ph.ListAll).Queries("currency", "{[A-Z]{3}}")
 	getRtr.HandleFunc("/products", ph.ListAll)
-	getRtr.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle)
+
+	getRtr.HandleFunc("/products/{id:[0-9]+}", ph.ListSingle).Queries("currency", "{[A-Z]{3}}")
 
 	putRtr := sm.Methods(http.MethodPut).Subrouter()
 	putRtr.HandleFunc("/products", ph.UpdateProducts)
@@ -61,25 +66,25 @@ func main() {
 	getRtr.Handle("/swagger.yaml", http.FileServer(http.Dir("./")))
 
 	// CORS handler
-	ch := gohandlers.CORS(gohandlers.AllowedOrigins([]string{"http://localhost:3000"}))
+	ch := gohandlers.CORS(gohandlers.AllowedOrigins([]string{"*"}))
 
 	// create a new server
 	s := &http.Server{
-		Addr:         ":8080",           // bind address
-		Handler:      ch(sm),            // default handler
-		ErrorLog:     l,                 // logger for server
-		ReadTimeout:  1 * time.Second,   // max time to read request from client
-		WriteTimeout: 1 * time.Second,   // max time to write response to client
-		IdleTimeout:  120 * time.Second, // max time for connections using TCP Keep-Alive
+		Addr:         ":8080",                                          // bind address
+		Handler:      ch(sm),                                           // default handler
+		ErrorLog:     l.StandardLogger(&hclog.StandardLoggerOptions{}), // logger for server
+		ReadTimeout:  1 * time.Second,                                  // max time to read request from client
+		WriteTimeout: 1 * time.Second,                                  // max time to write response to client
+		IdleTimeout:  120 * time.Second,                                // max time for connections using TCP Keep-Alive
 	}
 
 	// start the server
 	go func() {
-		l.Println("Starting server on port 8080")
+		l.Info("Starting server on port 8080")
 
 		err := s.ListenAndServe()
 		if err != nil {
-			l.Printf("Error starting server: %s\n", err)
+			l.Error("Error starting server", "error", err)
 			os.Exit(1)
 		}
 	}()
@@ -91,7 +96,7 @@ func main() {
 
 	// Block until a signal is received.
 	sig := <-c
-	l.Println("Received terminate, graceful shutdown", sig)
+	l.Info("Received terminate, graceful shutdown", sig)
 
 	// gracefully shutdown the server, waiting max 30 seconds for current operations to complete
 	ctx, _ := context.WithTimeout(context.Background(), 30*time.Second)
